fix printing overflow

--- a/lms/static/certificates/sass/_layouts.scss
+++ b/lms/static/certificates/sass/_layouts.scss
@@ -296,7 +296,7 @@
         width: 70%;
         font-weight: 700;
         font-style: bold;
-        line-height: 1.5;
+        line-height: 1.2;
     }
     main .message{
         font-family:  'Bai Jamjuree', sans-serif;
